fix(QTDI-3124): S6204 remove tedious toList() changes